# personal-web-agent

./: .air.toml  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  goal.md  render.yaml
.claude/agents/: backend-dev.md  content-test.md  devops.md  frontend-dev.md  golang-backend-developer.md  react-frontend-expert.md  security.md
.github/workflows/: README.md  ci.yml  dependency-update.yml  deploy.yml
api/: README.md  go.mod  go.sum  pyproject.toml  requirements.txt  setup_calendar.py  setup_calendly.py
api/app/: config.py  dependencies.py  main.py
api/app/agent/: agent.py  content.py  guardrails.py
api/app/agent/tools/: public.py  workspace.py
api/app/middleware/: rate_limit.py  security.py
api/app/routers/: auth.py  chat.py  feedback.py  health.py
api/app/services/: auth_service.py  calendar_service.py  calendly_service.py  email_service.py  token_store.py
api/cmd/server/: main.go
api/internal/chat/: handler.go
api/internal/config/: config.go  config_test.go
api/internal/content/: loader.go
api/internal/feedback/: email.go  handler.go
api/internal/guardrails/: pipeline.go
api/internal/providers/: gemini.go
api/internal/server/: middleware.go  routes.go
api/internal/types/: types.go
api/internal/utils/: http.go
api/tests/: test_content.py  test_guardrails.py
content/: jai_rathore_resume.md  packs.json
content/bio/: bio.md
content/projects/: fluxbot.md  (+1 more)
web/: .env.example  .env.production  README.md  index.html  install.sh  package-lock.json  package.json  tailwind.config.js
(+18 files in other folders)
